# rust-dmi

./: Cargo.toml  README.md
source/: dmi.py  test.py
src/: dmi.rs  lib.rs  main.rs  tests.rs
