[package]
name = "rust-dmi"
version = "0.1.0"
edition = "2021"

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
netlib = ["ndarray-linalg/netlib"]

[dependencies]
factorial = "0.2.1"
ndarray = { version = "0.15.6", features = ["blas"] }
# ndarray = { version = "0.5", features = ["blas"] }
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"]}
rand = "0.8.5"
shuffle = "0.1.7"
